# vcrpy-encrypt

./: .actrc  .gitignore  README.md  mypy.ini  noxfile.py  poetry.toml  pyproject.toml  pytest.ini  setup.cfg  tasks.py
.githooks/: pre-commit
.github/workflows/: ci.yml  dev.yml  legacy.yml  pr.yml  prod.yml
tasks/: __init__.py  helpers.py  main.py
tests/: conftest.py  test_persister.py
vcrpy_encrypt/: __init__.py  persister.py
