[tool.poetry]
name = "vcrpy-encrypt"
version = "0.9.1"
description = "Encrypt vcrpy cassettes so they can be safely kept under version control."

license = "GPL-3.0-only"

authors = [
  "Carlo De Pieri <depieri.carlo@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/CarloDePieri/vcrpy-encrypt"
homepage = "https://github.com/CarloDePieri/vcrpy-encrypt"

packages = [
  { include = "vcrpy_encrypt" }
]

keywords = ["python", "vcr", "vcrpy", "encrypt"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^3.4.7"
vcrpy = "^4.1.1"

[tool.poetry.dev-dependencies]
coveralls = "^3.0.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-sugar = "^0.9.4"
pytest-spec = "^3.1.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
requests = "^2.26.0"
invoke = "^1.6.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
