[tool.poetry]
name = "vcrpy-encrypt"
version = "1.0.0"
description = "Encrypt vcrpy cassettes so they can be safely kept under version control."

license = "GPL-3.0-only"

authors = [
  "Carlo De Pieri <depieri.carlo@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/CarloDePieri/vcrpy-encrypt"
homepage = "https://github.com/CarloDePieri/vcrpy-encrypt"

packages = [
  { include = "vcrpy_encrypt" }
]

keywords = ["python", "vcr", "vcrpy", "encrypt"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^37.0.4"
vcrpy = "^4.2.0"

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.5"
pytest-spec = "^3.2.0"
flake8 = "^5.0.2"
requests = "^2.28.1"
black = "^22.6.0"
nox = "^2022.1.7"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"