[tool.poetry]
name = "vcrpy-encrypt"
version = "0.9.2"
description = "Encrypt vcrpy cassettes so they can be safely kept under version control."

license = "GPL-3.0-only"

authors = [
  "Carlo De Pieri <depieri.carlo@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/CarloDePieri/vcrpy-encrypt"
homepage = "https://github.com/CarloDePieri/vcrpy-encrypt"

packages = [
  { include = "vcrpy_encrypt" }
]

keywords = ["python", "vcr", "vcrpy", "encrypt"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8.1"
cryptography = "^42.0.3"
vcrpy = "^6.0.1"

[tool.poetry.dev-dependencies]
coveralls = "^3.3.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^1.0.0"
pytest-spec = "^3.2.0"
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
requests = "^2.31.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
